--- a/index.html
+++ b/index.html
@@ -74831,6 +74831,13 @@
 </tr>
 
 <tr>
+<td>Thunderbolt Jaxon</td>
+<td>2006</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Thunderbolts</td>
 <td>1997</td>
 <td>Marvel</td>
@@ -74842,6 +74849,13 @@
 <td>1985</td>
 <td>Marvel</td>
 <td><a href="Thundercats/Thundercats.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Thundercats</td>
+<td>2002</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -75010,6 +75024,13 @@
 <td>1985</td>
 <td>First Comics</td>
 <td><a href="FirstComics/FirstComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Time Guardian</td>
+<td>2007</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -75251,6 +75272,13 @@
 </tr>
 
 <tr>
+<td>Tokyo Storm Warning</td>
+<td>2003</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Tokyo Zombie</td>
 <td>2008</td>
 <td>Last Gasp</td>
@@ -75318,6 +75346,13 @@
 <td>2013</td>
 <td>Vertigo</td>
 <td><a href="Vertigo/Vertigo.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tom Strong And the Robots Of Doom</td>
+<td>2010</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -75444,6 +75479,13 @@
 <td>1999</td>
 <td>America's Best</td>
 <td><a href="Top10/Top10.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Top 10 Season Two</td>
+<td>2008</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -75612,6 +75654,13 @@
 <td>2002</td>
 <td>Sirius</td>
 <td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tower Of The Future</td>
+<td>2005</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -76410,6 +76459,13 @@
 </tr>
 
 <tr>
+<td>Twilight Experiment</td>
+<td>2005</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Twilight Live Wire</td>
 <td>1997</td>
 <td>Avatar</td>
@@ -76561,6 +76617,13 @@
 <td>1973</td>
 <td>Last Gasp</td>
 <td><a href="LastGasp/LastGasp.html">Details</a></td> 
+</tr>
+
+<tr>
+<td>Two-Step</td>
+<td>2011</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -78328,6 +78391,13 @@
 </tr>
 
 <tr>
+<td>Victorian Undead</td>
+<td>2010</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Victory</td>
 <td>2003</td>
 <td>Image</td>
@@ -78598,6 +78668,13 @@
 <td>1952</td>
 <td>Farrell</td>
 <td><a href="Voodoo/Voodoo.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Voodoo: Dancing In The Dark</td>
+<td>1999</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -79964,6 +80041,13 @@
 </tr>
 
 <tr>
+<td>Welcome To Tranquility</td>
+<td>2007</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Wellington</td>
 <td>2019</td>
 <td>IDW</td>
@@ -80143,6 +80227,27 @@
 <td>1994</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wetworks</td>
+<td>2006</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wetworks: Armageddon</td>
+<td>2008</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wetworks: Mutations</td>
+<td>2010</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -80561,6 +80666,13 @@
 </tr>
 
 <tr>
+<td>Wild Girl</td>
+<td>2005</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Wild Kingdom</a>
 <td>1993</td>
 <td>MU Press</td>
@@ -80600,6 +80712,13 @@
 <td>2019</td>
 <td>Ablaze</td>
 <td><a href="AblazePublishing/AblazePublishing.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wild Times: Deathblow</td>
+<td>1999</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -80652,6 +80771,62 @@
 </tr>
 
 <tr>
+<td>Wildcats</td>
+<td>2000</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wildcats: Armageddon</td>
+<td>2008</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wildcats: Gang War</td>
+<td>2000</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wildcats: Homecoming</td>
+<td>1999</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wildcats: Ladytron</td>
+<td>2000</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wildcats: Mosaic</td>
+<td>2000</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wildcats: Nemesis</td>
+<td>2005</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wildcats: Street Smart</td>
+<td>2000</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Wilderness</td>
 <td>1989</td>
 <td>4 Winds</td>
@@ -80673,6 +80848,13 @@
 </tr>
 
 <tr>
+<td>Wildsiderz</td>
+<td>2005</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Wildstar</td>
 <td>1993</td>
 <td>Image</td>
@@ -80680,10 +80862,17 @@
 </tr>
 
 <tr>
-<td>Wildstorm!</td>
-<td>1995</td>
-<td>Image</td>
-<td><a href="Image/image.html">Details</a></td>
+<td>Wildstorm Annual</td>
+<td>2000</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wildstorm Fine Arts: Spotlight On Gen13</td>
+<td>2008</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -80691,6 +80880,41 @@
 <td>1999</td>
 <td>Publisher</td>
 <td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wildstorm Revelations</td>
+<td>2008</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wildstorm Summer Special</td>
+<td>2001</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wildstorm Thunderbook</td>
+<td>2000</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wildstorm Universe</td>
+<td>2008</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wildstorm!</td>
+<td>1995</td>
+<td>Image</td>
+<td><a href="Image/image.html">Details</a></td>
 </tr>
 
 <tr>
@@ -80901,6 +81125,20 @@
 <td>1987</td>
 <td>Abbeville</td>
 <td><a href="AbbevillePress/AbbevillePress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Winter Men</td>
+<td>2010</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Winter Men Winter Special</td>
+<td>2009</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -81402,6 +81640,13 @@
 </tr>
 
 <tr>
+<td>World Of Warcraft</td>
+<td>2008</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
+</tr>
+
+<tr>
 <td>World Of Wood</td>
 <td>1986</td>
 <td>Eclipse</td>
@@ -81479,6 +81724,13 @@
 </tr>
 
 <tr>
+<td>Worldstorm</td>
+<td>2006</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Wormdye</td>
 <td>2008</td>
 <td>Secret Acres</td>
@@ -81511,6 +81763,13 @@
 <td>1940</td>
 <td>Fawcett</td>
 <td><a href="Wow/Wow.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wraithborn</td>
+<td>2005</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -81736,6 +81995,13 @@
 <td>1993</td>
 <td>Fox</td>
 <td><a href="XFiles/XFiles.html">Details</a></td>
+</tr>
+
+<tr>
+<td>X-Files</td>
+<td>2008</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -82212,6 +82478,13 @@
 <td>1972</td>
 <td>Last Gasp</td>
 <td><a href="LastGasp/LastGasp.html">Details</a></td> 
+</tr>
+
+<tr>
+<td>Young Magician</td>
+<td>2005</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
 </tr>
 
 <tr>
